--- a/conf/my.cnf
+++ b/conf/my.cnf
@@ -77,7 +77,7 @@ query_cache_size        = 16M
 #general_log_file        = /var/log/mysql/mysql.log
 #general_log             = 1
 
-log_error                = /var/log/mysql/error.log
+keylog_error                = /var/log/mysql/error.log
 
 # Here you can see queries with especially long duration
 #log_slow_queries	= /var/log/mysql/mysql-slow.log
